Fixed and aligned nav bar text and icons. centered icons on the left

--- a/src/Models/ContractItem.css
+++ b/src/Models/ContractItem.css
@@ -171,6 +171,9 @@ input:checked+.slider:before {
   font-size: 50%;
   padding: 2%;
   margin: 1%;
+  margin-bottom: 2%;
+  display: inline;
+  position:  inherit;
 }
 
 .switch {
